[package]
name = "heaven_and_hell"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = {version="0.4.0-alpha0.3", features=["stdweb"]}
rand = "0.7.3"
image = "0.23.4"
mergui = "0.1.0-alpha.1"
silver_animation = {git="https://github.com/lenscas/silver_animation"}
async-trait = "*"
nalgebra = "0.20"
# Choose the one you need, or both.
ncollide2d = "0.22"
# Choose the one you need, or both.
nphysics2d = "0.14"